feat(footer): add footer component with basic structure

--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
@@ -15,8 +15,8 @@
           <p>${childContent.jcr:description @ context='html'}</p>      
       </main>
 
-      <footer>
-          <p>Aakash Portfolio</p>
-      </footer>
+      
+    <sly data-sly-resource="${'footer' @ resourceType='aakash-portfolio/components/footer'}"/>
+      
   </body>
   </html>
