feat(header): added css style

--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
@@ -12,7 +12,7 @@
     <sly data-sly-resource="${'header' @ resourceType='aakash-portfolio/components/header'}"/>
 
       <main>
-          <p>${childContent.jcr:description @ context='html'}</p>      
+        <sly data-sly-resource="${'hero-banner' @ resourceType='aakash-portfolio/components/hero-banner'}"/>
       </main>
 
       
