--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/header/header.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/header/header.html
@@ -1,17 +1,13 @@
 <header class="site-header" data-sly-use.header="com.aakash.portfolio.core.models.HeaderModel">
-    <div class="header-container">
-        <div class="header-logo">
-            <a href="${header.homePagePath}">
-                <span>${header.siteName}</span>
-            </a>
-        </div>
-        
-        <nav class="header-nav">
-            <ul class="nav-list">
-                <li data-sly-list.navItem="${header.navigationItems}">
-                    <a href="${navItem.path}" class="${navItem.active ? 'active' : ''}">${navItem.title}</a>
-                </li>
-            </ul>
-        </nav>
-    </div>
+    <link rel="stylesheet" href="/apps/aakash-portfolio/clientlibs/clientlib-site/css/header.css"/>        
+    <nav class="header-nav">
+        <a href="${header.homePagePath}" class="header-logo">
+            <span>${header.siteName}</span>
+        </a>
+        <ul class="nav-list">
+            <li><a href="${header.aboutPagePath}">About</a></li>
+            <li><a href="${header.projectsPagePath}">Projects</a></li>
+            <li><a href="${header.contactPagePath}">Contact</a></li>
+        </ul>
+    </nav>
 </header>
