--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/header/header.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/header/header.html
@@ -4,7 +4,7 @@
         <a href="${header.homePagePath}" class="header-logo">
             <span>${header.siteName}</span>
         </a>
-        <ul class="nav-list">
+        <ul class="header-nav-list">
             <li><a href="${header.aboutPagePath}">About</a></li>
             <li><a href="${header.projectsPagePath}">Projects</a></li>
             <li><a href="${header.contactPagePath}">Contact</a></li>
