--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/hero-banner/hero-banner.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/hero-banner/hero-banner.html
@@ -1,12 +1,11 @@
 <div class="hero-banner-container">
+  <link rel="stylesheet" href="/apps/aakash-portfolio/clientlibs/clientlib-site/css/hero.css"/>        
   <div class="hero-banner-content">
-    <p>AEM Developer</p>
-    <h1>Hello,  my name is Madelyn Torff</h1>
-    <p>Short text with details about you, what you do or your professional career. You can add more information on the about page.</p>
-    <button>Projects</button>
-    <button>LinkedIn</button>
+    <h2>AEM Developer</h2>
+    <h1>Hello,  my name <br/> is Aakash Baskaran</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum at qui eos culpa, quibusdam consequuntur sunt error explicabo voluptate laboriosam.</p>
+    <button id="projects_button">Projects</button>
+    <button id="linkedin_button">LinkedIn</button>
   </div>
-  <div class="hero-banner-image">
-    <img src="/content/aakash-portfolio/assets/images/hero-banner-image.png" width="720" height="629" alt="Hero Image"/>
-  </div>
+  <div class="hero-banner-image" role="img" aria-label="Hero Image"></div>
 </div>
