refactor(header): replace hardcoded nav items with JCR content
- Move navigation data from HTL template to home/.content.xml
- Add NavItem model for dynamic nav item rendering
- Fix resource paths to use jcr:content

--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/clientlibs/clientlib-site/css/header.css
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/clientlibs/clientlib-site/css/header.css
@@ -25,12 +25,20 @@
 }
 
 .header-nav-list {
-    /* background-color: #FDC435; */
     display: flex;
     list-style: none;
     gap: 2rem;
     margin: 0;
     padding: 0;
+}
+
+.header-nav-list > li {
+    margin-right: 2rem;
+    display: inline-block;
+}
+
+.header-nav-list > li:last-child {
+    margin-right: 0;
 }
 
 .header-nav-list a {
