--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
@@ -9,14 +9,14 @@
   </head>
   <body>
         
-    <sly data-sly-resource="${'header' @ resourceType='aakash-portfolio/components/header'}"/>
+    <sly data-sly-resource="${'jcr:content/header' @ resourceType='aakash-portfolio/components/header'}"/>
 
       <main>
-        <sly data-sly-resource="${'hero-banner' @ resourceType='aakash-portfolio/components/hero-banner'}"/>
+        <sly data-sly-resource="${'jcr:content/hero-banner' @ resourceType='aakash-portfolio/components/hero-banner'}"/>
       </main>
 
-      
-    <sly data-sly-resource="${'footer' @ resourceType='aakash-portfolio/components/footer'}"/>
+
+    <sly data-sly-resource="${'jcr:content/footer' @ resourceType='aakash-portfolio/components/footer'}"/>
       
   </body>
   </html>
