refactor(footer): replace hardcoded icons with JCR content

--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/footer/footer.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/footer/footer.html
@@ -2,22 +2,16 @@
     <link rel="stylesheet" href="/apps/aakash-portfolio/clientlibs/clientlib-site/css/footer.css"/>
     <nav class="footer-nav">
         <ul class="footer-nav-list">
-            <li>
-                <a href="${footer.linkedinPath}" target="_blank" aria-label="LinkedIn">
-                    <img src="/content/aakash-portfolio/assets/icons/linkedin.svg" width="24" height="24" alt="LinkedIn">
-                </a>
-            </li>
-            <li>
-                <a href="${footer.githubPath}" target="_blank" aria-label="GitHub">
-                    <img src="/content/aakash-portfolio/assets/icons/github.svg" width="24" height="24" alt="GitHub">
-                </a>
-            </li>
-            <li>                    <a href="mailto:${footer.emailAddress}" aria-label="Email">
-                    <img src="/content/aakash-portfolio/assets/icons/email.svg" width="24" height="24" alt="Email">
-                </a>
-            </li>
+            <sly data-sly-list="${footer.navItems}">
+                <li>
+                    <a href="${item.path}" target="_blank">
+                        <img src="${item.iconPath}" width="24" height="24" alt="${item.label}">
+                    </a>
+                </li>
+            </sly>
         </ul>
     </nav>
+    <!-- Debug Info: ${footer.debugInfo} -->
     <div class="footer-text">
         <span>${footer.footerText}</span>
     </div>
