--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/hero-banner/hero-banner.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/hero-banner/hero-banner.html
@@ -1,11 +1,14 @@
 <div class="hero-banner-container" data-sly-use.heroBanner="com.aakash.portfolio.core.models.HeroBannerModel">
-  <link rel="stylesheet" href="/apps/aakash-portfolio/clientlibs/clientlib-site/css/hero.css"/>
+  <link rel="stylesheet" href="/apps/aakash-portfolio/clientlibs/clientlib-site/css/hero.css" />
   <div class="hero-banner-content">
     <h2>${heroBanner.jobTitle}</h2>
     <h1>${heroBanner.name @ context='html'}</h1>
     <p>${heroBanner.description}</p>
     <a href="${heroBanner.button1Path}" class="btn" id="button1">${heroBanner.button1Text}</a>
-    <a href="${heroBanner.button2Path}" class="btn" id="button2" target="_blank" rel="noopener noreferrer">${heroBanner.button2Text}</a>
+    <a href="${heroBanner.button2Path}" class="btn" id="button2" target="_blank"
+      rel="noopener noreferrer">${heroBanner.button2Text}</a>
   </div>
-  <div class="hero-banner-image" role="img" aria-label="Hero Image"></div>
+  <div class="hero-banner-image" style="background-image: url(${heroBanner.imagePath @ context='unsafe'})" role="img"
+    aria-label="Hero Image">
+  </div>
 </div>
