--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
@@ -13,6 +13,12 @@
 
       <main>
         <sly data-sly-resource="${'jcr:content/hero-banner' @ resourceType='aakash-portfolio/components/hero-banner'}"/>
+
+        <!-- <section class="projects-section"> -->
+          <sly data-sly-resource="${'jcr:content/project1' @ resourceType='aakash-portfolio/components/project-card'}"/>
+          <sly data-sly-resource="${'jcr:content/project2' @ resourceType='aakash-portfolio/components/project-card'}"/>
+          <sly data-sly-resource="${'jcr:content/project3' @ resourceType='aakash-portfolio/components/project-card'}"/>
+        <!-- </section> -->
       </main>
 
 
