--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/clientlibs/clientlib-site/css/hero.css
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/clientlibs/clientlib-site/css/hero.css
@@ -15,27 +15,28 @@
 
 .hero-banner-content h2 {
     font-size: 1.25rem;
+    margin-bottom: 0.5rem;
     color: #FDC435;
 }
 
 .hero-banner-content h1 {
     font-size: 3rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 2rem;
     color: #25282B;
     line-height: 1.2;
 }
 
 .hero-banner-content p {
     font-size: 1.5rem;
-    margin-bottom: 1rem;
+    margin-bottom: 1.5rem;
     color: #828282;
 }
 
 .hero-banner-content .btn {
     display: inline-block;
-    padding: 0.8em 1.5em;
-    margin: 0 0.5em;
+    padding: 0.3em 1.5em;
     font-size: 1.125rem;
+    font-weight: bold;
     cursor: pointer;
     border-radius: 5px;
     text-decoration: none;
@@ -57,6 +58,7 @@
     background-color: #FDC435;
     color: #25282B;
     border: 2px solid #FDC435;
+    margin-right: 0.375rem;        /* Gap between buttons */
 }
 
 #button2 {
