--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/clientlibs/clientlib-site/css/site.css
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/clientlibs/clientlib-site/css/site.css
@@ -8,5 +8,11 @@
 body {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, sans-serif;
     line-height: 1.6;
-    color: #333;
+    background-color: #F9FAFF;
+}
+
+/* Project Section */
+.projects-section {
+    background-color: #F9FAFF;
+    padding: 6rem 0;
 }
