--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
@@ -14,12 +14,19 @@
       <main>
         <sly data-sly-resource="${'jcr:content/hero-banner' @ resourceType='aakash-portfolio/components/hero-banner'}"/>
 
+        <section class="about-section">
+          <sly data-sly-resource="${'jcr:content/about-title' @ resourceType='aakash-portfolio/components/section-title'}"/>
+          <sly data-sly-resource="${'jcr:content/about-banner' @ resourceType='aakash-portfolio/components/hero-banner'}"/>
+        </section>
+
         <section class="projects-section">
-          <sly data-sly-resource="${'jcr:content/section-title' @ resourceType='aakash-portfolio/components/section-title'}"/>
+          <sly data-sly-resource="${'jcr:content/projects-title' @ resourceType='aakash-portfolio/components/section-title'}"/>
           <sly data-sly-resource="${'jcr:content/project1' @ resourceType='aakash-portfolio/components/project-card'}"/>
           <sly data-sly-resource="${'jcr:content/project2' @ resourceType='aakash-portfolio/components/project-card'}"/>
           <sly data-sly-resource="${'jcr:content/project3' @ resourceType='aakash-portfolio/components/project-card'}"/>
         </section>
+
+
       </main>
 
 
