--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/hero-banner/hero-banner.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/hero-banner/hero-banner.html
@@ -3,9 +3,19 @@
   <div class="hero-banner-content">
     <h2>${heroBanner.jobTitle}</h2>
     <h1>${heroBanner.name @ context='html'}</h1>
-    <p>${heroBanner.description}</p>
-    <a data-sly-test="${heroBanner.button1Text}" href="${heroBanner.button1Path}" class="btn" id="button1">${heroBanner.button1Text}</a>
-    <a data-sly-test="${heroBanner.button2Text}" href="${heroBanner.button2Path}" class="btn" id="button2" target="_blank"
+    <p>${heroBanner.description @ context='html'}</p>
+    <a data-sly-test="${heroBanner.button1Text && !heroBanner.button1Download}" 
+      href="${heroBanner.button1Path}" 
+      class="btn" id="button1">${heroBanner.button1Text}</a>
+
+    <a data-sly-test="${heroBanner.button1Text && heroBanner.button1Download}" 
+      href="${heroBanner.button1Path}" 
+      class="btn" id="button1"
+      download="${heroBanner.button1Download}">${heroBanner.button1Text}</a>    
+    
+    <a data-sly-test="${heroBanner.button2Text}" 
+      href="${heroBanner.button2Path}"
+      class="btn" id="button2" target="_blank"
       rel="noopener noreferrer">${heroBanner.button2Text}</a>
   </div>
   <div class="hero-banner-image" style="background-image: url(${heroBanner.imagePath @ context='unsafe'})" role="img"
