--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/page/page.html
@@ -14,19 +14,19 @@
       <main>
         <sly data-sly-resource="${'jcr:content/hero-banner' @ resourceType='aakash-portfolio/components/hero-banner'}"/>
 
-        <section class="about-section">
+        <section class="about-section" id="about">
           <sly data-sly-resource="${'jcr:content/about-title' @ resourceType='aakash-portfolio/components/section-title'}"/>
           <sly data-sly-resource="${'jcr:content/about-banner' @ resourceType='aakash-portfolio/components/hero-banner'}"/>
         </section>
 
-        <section class="projects-section">
+        <section class="projects-section" id="projects">
           <sly data-sly-resource="${'jcr:content/projects-title' @ resourceType='aakash-portfolio/components/section-title'}"/>
           <sly data-sly-resource="${'jcr:content/project1' @ resourceType='aakash-portfolio/components/project-card'}"/>
           <sly data-sly-resource="${'jcr:content/project2' @ resourceType='aakash-portfolio/components/project-card'}"/>
           <sly data-sly-resource="${'jcr:content/project3' @ resourceType='aakash-portfolio/components/project-card'}"/>
         </section>
 
-        <section class="contact-section">
+        <section class="contact-section" id="contact">
           <sly data-sly-resource="${'jcr:content/contact-title' @ resourceType='aakash-portfolio/components/section-title'}"/>
           <sly data-sly-resource="${'jcr:content/contact-form' @ resourceType='aakash-portfolio/components/contact-form'}"/>
         </section>
