--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/header/header.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/header/header.html
@@ -4,9 +4,15 @@
         <a href="${header.homePagePath}" class="header-logo">
             <span>${header.siteName}</span>
         </a>
+        <input type="checkbox" id="menu-toggle" class="menu-toggle" />
+        <label for="menu-toggle" class="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+        </label>
         <ul class="header-nav-list">
             <sly data-sly-list="${header.navItems}">
-                <li><a href="${item.path}">${item.label}</a></li>
+                <li><a href="${item.path}" onclick="document.getElementById('menu-toggle').checked=false">${item.label}</a></li>
             </sly>
         </ul>
     </nav>
