--- a/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/project-card/project-card.html
+++ b/ui.apps/src/main/content/jcr_root/apps/aakash-portfolio/components/project-card/project-card.html
@@ -2,8 +2,8 @@
   <link rel="stylesheet" href="/apps/aakash-portfolio/clientlibs/clientlib-site/css/project-card.css"/>
   <div class="project-card-content">
     <h2>${projectCard.title}</h2>
-    <p>${projectCard.description}</p>
-    <a href="${projectCard.buttonPath}" class="btn" id="project-card-button">${projectCard.buttonText}</a>
+    <p>${projectCard.description @ context='html'}</p>
+    <a data-sly-test="${projectCard.buttonPath}" href="${projectCard.buttonPath}" class="btn" id="project-card-button" target="_blank">${projectCard.buttonText}</a>
   </div>
   <img class="project-card-image" src="${projectCard.imagePath}" alt="Project Image"/>
 </div>
